--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,64 @@
+body {
+    background-image: url("img/blur-stars.png");
+    background-color: black;
+}
+
 .box {
-   border: 2px solid black;
-   background-color: #f6e7be;
-   width: 40%;
-   padding: 2%;
-   margin: 10px;
+   border: 5px solid white;
+   background-color: rgba(0, 0, 0, 0.7);
+   padding: 20px;
    text-align: center;
-   height: 700px;
-   /*  display: flex; */
+   min-height: 800px;
+   border-radius: 10px;
 }
 .box img {
    max-width: 100%;
-   height: auto;
+   height: 300px;
+   border-radius: 10px;
 }
 .carousel-indicators {
    background-color: black;
    border-radius: 10px;
    bottom: -2rem;
 }
+.carousel-indicators [data-bs-target] {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin: 0 10px;
+}
+
 .carousel {
     flex: 1;
 }
 .box-text-box {
    padding-top: 1rem;
    flex: 1;
+   color: white;
 }
 .box-time-text {
-   font-size: 30px;
+   font-size: 40px;
 }
 .box-title-text {
-   font-size: 25px;
+   font-size: 35px;
 }
 .box-body-text {
-   font-size: 16px;
+   font-size: 25px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    gap: 30px;
+    justify-content: center;
+}
+
+#content {
+    margin: 30px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+    color: white;
 }
