--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,19 @@ body {
    border-radius: 10px;
 }
 .carousel-indicators {
-   background-color: black;
    border-radius: 10px;
-   bottom: -2rem;
+   bottom: -2.5rem;
 }
 .carousel-indicators [data-bs-target] {
-  width: 15px;
-  height: 15px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
   margin: 0 10px;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    bottom: -330px;
+    transform: none;
 }
 
 .carousel {
